# study-tg-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  amvera.yml  config.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
bot/: create_bot.py  handlers.py  qlogic.py
bot/data_base/: base.py  dao.py  database.py  db.py  models.py
bot/db/: __init__.py  dao.py  database.py  models.py  repository.py
bot/filters/: __init__.py  filter.py  filters.py
bot/handlers/: __init__.py  admin.py  easter_eggs.py  menu.py  register.py  start.py
bot/keyboards/: __init__.py  admin.py  keyboards.py
bot/middlewares/: __init__.py  middlewares.py
bot/utils/: __init__.py  broadcaster.py  create_folder.py  json_storage.py  queue.py
data/: add chat_id migration.py
docs/: README.md
migrations/: env.py
migrations/versions/: 5109774501eb_init.py  a44783274a95_remove_chat_id.py
